# property-praxis-data

./: .env  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
scripts/: clean_2021.py  clean_2022.py  clean_2023.py  clean_2024.py  clean_2025.py  clean_files.py  identify_ownership.py  own_id_map.py
sql/: parcels.sql  schema.sql
